--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ chrono = { version="0.4.24", features = ["serde"] }
 rocket = { version = "=0.5.0-rc.3", features = ["json"] }
 diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
 dotenvy = "0.15"
+rand = "0.8.5"
