--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ rocket = { version = "=0.5.0-rc.3", features = ["json"] }
 diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
 dotenvy = "0.15"
 rand = "0.8.5"
+serde_json = "1.0.96"
