--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,12 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "@vitejs/plugin-vue": "^4.2.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-plugin-vue": "^9.13.0",
+    "postcss": "^8.4.23",
     "prettier": "2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vue-tsc": "^1.4.2"
