--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "axios": "^1.4.0",
+    "firebase": "^10.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
