--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,10 +16,11 @@ jobs:
           echo "VITE_FIREBASE_PROJECT_ID=${{ secrets.VITE_FIREBASE_PROJECT_ID }}" >> .env.production
         working-directory: ./frontend
       - name: build
-        run: npm run build
+        run: npm install && npm run build
         working-directory: ./frontend
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CARCASSONNE_C28B5 }}'
           projectId: '${{ secrets.VITE_FIREBASE_PROJECT_ID }}'
+          entrypoint: ./frontend
