--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -11,6 +11,18 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "redirects": [
+      {
+        "source": "/:path*",
+        "destination": "https://top-carcassonner.com/:path",
+        "type": 301
+      },
+      {
+        "source": "/",
+        "destination": "https://top-carcassonner.com/",
+        "type": 301
+      }
     ]
   }
 }
