--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -14,7 +14,7 @@
     ],
     "redirects": [
       {
-        "source": "https://carcassonne-c28b5.firebaseapp.com:path*",
+        "source": "https://carcassonne-c28b5.firebaseapp.com/:path*",
         "destination": "https://top-carcassonner.com/:path",
         "type": 301
       },
