--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -14,8 +14,8 @@
     ],
     "redirects": [
       {
-        "source": "https://carcassonne-c28b5.firebaseapp.com/:path*",
-        "destination": "https://top-carcassonner.com/:path",
+        "source": "https://carcassonne-c28b5.firebaseapp.com/**",
+        "destination": "https://top-carcassonner.com/",
         "type": 301
       },
       {
