--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,3 +10,8 @@ diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
 dotenvy = "0.15"
 rand = "0.8.5"
 serde_json = "1.0.96"
+aws-config = "0.56.1"
+aws-sdk-dynamodb = "0.30.0"
+aws-sdk-s3 = "0.30.0"
+tokio = { version = "1", features = ["full"] }
+rocket-multipart-form-data = "0.10.6"
