--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0.96"
 aws-config = "0.56.1"
 aws-sdk-s3 = "0.30.0"
 rocket-multipart-form-data = "0.10.6"
+reqwest = { version="0.11.22", features = ["blocking", "json"] }
