--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,3 +15,4 @@ aws-sdk-s3 = "0.30.0"
 rocket-multipart-form-data = "0.10.6"
 r2d2-diesel = "1.0.0"
 reqwest = { version="0.11.22", features = ["blocking", "json"] }
+lingua = { version = "1.6.1", default-features = false, features = ["english", "japanese"] }
