--- a/.github/workflows/generate_problem.yaml
+++ b/.github/workflows/generate_problem.yaml
@@ -15,4 +15,4 @@ jobs:
       - run: |
           pip install get-chrome-driver --upgrade
           pip install -r backend/generate-problem/requirements.txt
-          python generate-problem/main.py
+          python backend/generate-problem/main.py
