--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "firebase": "^10.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vue-slider-component": "^4.1.0-beta.7"
+    "vue3-slider": "^1.9.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
