--- a/backend/generate-problem/requirements.txt
+++ b/backend/generate-problem/requirements.txt
@@ -1,4 +1,33 @@
-chromedriver_binary==125.0.6422.60
-get_chrome_driver==1.3.19
-Requests==2.31.0
+attrs==23.1.0
+beautifulsoup4==4.12.2
+bs4==0.0.1
+certifi==2023.7.22
+charset-normalizer==3.3.2
+chromedriver-binary==121.0.6167.85.0
+click==8.1.7
+docopt==0.6.2
+get-chrome-driver==1.3.19
+h11==0.14.0
+idna==3.4
+outcome==1.3.0.post0
+packaging==24.1
+pipreqs==0.4.13
+protobuf==4.21.12
+PySocks==1.7.1
+python-dotenv==1.0.1
+requests==2.31.0
 selenium==4.16.0
+setuptools @ file:///usr/local/Cellar/python%403.11/3.11.5/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ensurepip/_bundled/setuptools-68.1.2-py3-none-any.whl#sha256=ccf32376ed5c23b0f24a76dd4c7123394820f0b7c5ca43f4e67eee465cfaee94
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+trio==0.22.2
+trio-websocket==0.11.1
+typer==0.9.0
+typing_extensions==4.9.0
+urllib3==2.0.7
+webdriver-manager==4.0.2
+wheel @ file:///usr/local/Cellar/python%403.11/3.11.5/libexec/wheel-0.41.2-py3-none-any.whl#sha256=ca672845328b53d47806beda09620b0e061978af42e8305988cfa6b358424c98
+wsproto==1.2.0
+yarg==0.1.9
